# MyiUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
agent/: build.gradle.kts  settings.gradle.kts
assets/fonts/: .gitkeep
config/island/: layout.json  liquid_glass.json  motion.json
config/menu/: background.json  motion.json  netease.json  theme.json
design/injector/v1/: README.md  TECHNICAL.md  layout.json  tokens.json
design/injector/v1/preview/: index.html
design/v1/: README.md  TECHNICAL.md  background_spec.json  components.json  layout.json  tokens.json
design/v1/chat/: chat-frosted.html  chat-spec.json
design/v1/hud/: DESIGN.md  hud-gameplay.html  hud-spec.json
design/v1/hud/css/: hud-system.css
design/v1/intro/: AGENT-BRIEF.md  DESIGN-SPEC.md  PORT-PLAN.md  README.md  easing-reference.js  layer-map.json  motion-intro.json  particles-spec.json  timeline.json  tokens-intro.json
design/v1/island/: island-gameplay.html  island-spec.json
design/v1/preview/: _shared.css  index.html  intro-screen.html  multiplayer.html  options-accessibility.html  options-chat.html  options-controls.html  options-hub.html  options-language.html  options-resource-packs.html  options-skin.html  options-sound.html  options-video.html  singleplayer.html  title-screen.html
design/v1/screens/: add_server.json  create_world.json  multiplayer.json  options_accessibility.json  options_chat.json  options_controls.json  options_hub.json  options_language.json  options_resource_packs.json  options_skin.json  options_sound.json  options_video.json  singleplayer.json
electron/: package-lock.json  package.json
electron/main/: main.js
electron/preload/: preload.js
electron/renderer/: index.html
electron/renderer/css/: island-system.css  overlay.css
electron/renderer/js/: app.js
injector/: CMakeLists.txt
injector/src/: gui_app.cpp  gui_app.h  gui_injector.cpp  gui_injector.h  inject_core.cpp  inject_core.h  logo_assets.cpp  logo_assets.h  main.cpp  process_scanner.cpp  process_scanner.h  runtime_sync.cpp  runtime_sync.h
injector/webui/: index.html
mod/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  stonecutter.gradle.kts  stonecutter.properties.toml
mod/gradle/wrapper/: gradle-wrapper.properties
overlay/: CMakeLists.txt
overlay/assets/shaders/: liquidGlassV2Clear.frag  liquidGlassV2Tinted.frag
overlay/assets/web/: smoke.html
overlay/src/: dllmain.cpp  hooks.cpp  hooks.h  overlay_runtime.cpp  overlay_runtime.h  runtime_paths.h
overlay/src/bridge/: native_bridge.cpp  native_bridge.h  native_query.cpp  native_query.h  native_state.cpp  native_state.h  overlay_command_queue.cpp  overlay_command_queue.h  overlay_state_reader.h  ui_state_types.h
overlay/src/config/: config_loader.cpp  config_loader.h  user_settings.cpp  user_settings.h
overlay/src/inject/: game_hook.cpp  game_hook.h
overlay/src/ipc/: pipe_client.cpp  pipe_client.h  shm_reader.cpp  shm_reader.h
overlay/src/jvm/: jni_func.cpp  jni_func.h  jvm_context.cpp  jvm_context.h  jvm_log.cpp  jvm_log.h  jvm_spike.cpp  jvm_spike.h
overlay/src/preload/: preloader.cpp  preloader.h  preloader_class.h
overlay/src/render/: frame_runtime.cpp  frame_runtime.h  gl_loader.cpp  gl_loader.h  gl_state_guard.cpp  gl_state_guard.h  liquid_glass_shader.cpp  liquid_glass_shader.h
overlay/src/ui/: async_pipe.cpp  async_pipe.h  easing.h  fonts.cpp  fonts.h  glass_panel.cpp  glass_panel.h  logo_assets.cpp  logo_assets.h  main_menu.cpp  main_menu.h  media_library.cpp  media_library.h  menu_app.cpp  menu_app.h  menu_background.cpp  menu_background.h  menu_data.cpp  menu_data.h  menu_filter.h  menu_icons.cpp  menu_icons.h  motion_spec.h  profile_avatar.cpp  profile_avatar.h  profile_card.cpp  profile_card.h  screen_id.h  screen_transition.cpp  screen_transition.h  strings_zh.h  ui_manager.cpp  ui_manager.h  ui_scale.h
overlay/src/ui/chat/: chat_renderer.cpp  chat_renderer.h  chat_tokens.h
overlay/src/ui/clickgui/: clickgui.cpp  clickgui.h
overlay/src/ui/hud/: hud_glass.cpp  hud_glass.h  hud_renderer.cpp  hud_renderer.h  hud_tokens.h  immersive_lyrics.cpp  immersive_lyrics.h  info_widgets.cpp  info_widgets.h  layout_editor.cpp  layout_editor.h  liquid_glass_panel.cpp  liquid_glass_panel.h  now_playing.cpp  now_playing.h  now_playing_layout.cpp  now_playing_layout.h
overlay/src/ui/intro/: intro_easing.h  intro_particles.cpp  intro_particles.h  intro_screen.cpp  intro_screen.h  intro_timeline.h  intro_tokens.h
overlay/src/ui/island/: island_renderer.cpp  island_renderer.h  island_tokens.h  spring_animator.cpp  spring_animator.h
overlay/src/ui/music/: cover_loader.cpp  cover_loader.h  music_panel.cpp  music_panel.h
overlay/src/ui/screens/: add_server_screen.cpp  create_world_screen.cpp  home_screen.cpp  menu_screens.h  multiplayer_screen.cpp  options_detail_screen.cpp  options_hub_screen.cpp  singleplayer_screen.cpp
overlay/src/ui/theme/: material_you.cpp  material_you.h  theme_runtime.cpp  theme_runtime.h
overlay/src/ui/widgets/: animated_toggle.h  audio_visualizer.cpp  audio_visualizer.h  glass_button.cpp  glass_button.h  glass_slider.h  nav_list.cpp  nav_list.h  parallax_card.cpp  parallax_card.h  screen_shell.cpp  screen_shell.h  toast.cpp  toast.h  yc_capsule_switch.h  yc_search_box.h  yc_segment_selector.h  yc_slider.h
overlay/src/web/: web_engine.cpp  web_engine.h  web_panel.cpp  web_panel.h  web_view.cpp  web_view.h
protocol/: schema.json  types.js
scripts/: build-overlay.ps1
shared/: logo_wic.cpp  logo_wic.h
tools/: generate_preloader_class.ps1
(+84 files in other folders)
